fix: nb-card-body overflow: visible

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -23,6 +23,10 @@ ngb-typeahead-window.dropdown-menu {
   overflow-y: auto;
 }
 
+nb-card-body {
+  overflow: visible !important;
+}
+
 #toast-container > div {
   width: 40rem !important;
 }
